--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h5>São Paulo | SP</h5>
                     <button>Ver</button>
                 </li>
-                
+                <li class="eventos__botao"><button>Ver mais</button></li>
             </ul>
         </section>
         <section class="agenda">
